# t

./: README.md  WARPTrainer.py  pyproject.toml  report.ipynb  reward_model.ipynb
wandb/run-20240804_143412-bpnkygdo/: run-bpnkygdo.wandb
wandb/run-20240804_143412-bpnkygdo/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
